# Clicoscan

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.jsx  config.jsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/lib/: libnfc-x86_64-unknown-linux-gnu
src-tauri/src/: errors.rs  main.rs  models.rs
src/api/: index.jsx
src/components/AppButton/: index.jsx
src/components/AppHeader/: index.jsx  style.module.css
src/components/AppLoader/: index.jsx  style.module.css
src/components/RecordingButton/: index.jsx  style.module.css
src/components/SearchBar/: index.jsx  style.module.css
src/components/SelectList/: index.jsx
src/components/SessionsTable/: index.jsx  style.module.css
src/components/ToastList/: index.jsx  style.module.css
src/components/Toggle/: index.jsx
src/context/: auth.jsx  toast.jsx
src/pages/Login/: index.jsx  style.module.css
src/pages/Session/: index.jsx  style.module.css
src/pages/Sessions/: index.jsx  style.module.css
template/: authorized.html  error.html
