[package]
name = "clicoscan"
version = "0.0.1"
description = "Desktop application for scanning student nfc cards. This application is part of a set of applications responsible for student attendance listing."
authors = ["Julien Aldon"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nfc = "0.1.11"
reqwest = { version = "0.11.22", features = ["json"] }
open = "5.0.0"
oauth2 = "4.4.2"
axum = "0.6.20"
tokio = "1.33.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
